--- a/kiosk-app/package.json
+++ b/kiosk-app/package.json
@@ -1,16 +1,22 @@
 {
   "name": "kiosk-app",
   "version": "0.1.0",
+  "description": "Military Attendance Tracking System - Kiosk Application",
+  "author": "Your Name",
+  "main": "electron/main.js",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "electron:dev": "npm run build && electron .",
+    "electron:build": "npm run build && electron-builder",
+    "electron:build:win": "npm run build && electron-builder --win",
+    "electron:build:mac": "npm run build && electron-builder --mac",
+    "pack": "electron-builder --dir"
   },
   "dependencies": {
-    "electron": "^38.2.2",
-    "electron-builder": "^26.0.12",
     "face-api.js": "^0.22.2",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
@@ -23,6 +29,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "electron": "^33.4.11",
+    "electron-builder": "^26.0.12",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
