--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,103 @@
-# Node.js
-node_modules/
+# ============================================
+# MONOREPO .GITIGNORE (Next.js + NestJS)
+# ============================================
+
+########################################
+# Node.js Dependencies & Logs
+########################################
+**/node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# Logs
-logs
+pnpm-debug.log*
+lerna-debug.log*
+logs/
 *.log
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+########################################
+# Build Outputs (all projects)
+########################################
+**/dist/
+**/build/
+**/.next/
+**/out/
+**/.temp/
+**/.tmp/
 
-# Build outputs
-dist/
-build/
-.next/
-out/
+########################################
+# Coverage & Test Outputs
+########################################
+**/coverage/
+**/.nyc_output/
 
-# Environment files
-.env
-.env.local
-.env.*.local
-
-# OS generated files
+########################################
+# Operating System Files
+########################################
 .DS_Store
 Thumbs.db
 
-# IDE settings
-.vscode/
-.idea/
+########################################
+# Editor & IDE Settings
+########################################
+**/.idea/
+**/.vscode/*
+!**/.vscode/settings.json
+!**/.vscode/tasks.json
+!**/.vscode/launch.json
+!**/.vscode/extensions.json
+**/.project
+**/.classpath
+**/.c9/
+**/*.launch
+**/.settings/
+**/*.sublime-workspace
 
-# Misc
+########################################
+# Environment Variables (all environments)
+########################################
+**/.env*
+# This covers:
+# .env
+# .env.local
+# .env.development
+# .env.production
+# .env.test
+# etc.
+
+########################################
+# Runtime & Temporary Data
+########################################
+**/pids
+**/*.pid
+**/*.seed
+**/*.pid.lock
+**/report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+########################################
+# Yarn Plug'n'Play / Package Managers
+########################################
+.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+
+########################################
+# Deployment & Build Tools
+########################################
+**/.vercel/
+
+########################################
+# TypeScript
+########################################
+**/*.tsbuildinfo
+**/next-env.d.ts
+
+########################################
+# Miscellaneous
+########################################
+*.pem
 *.swp
 *.swo
