removed unused code

--- a/backend/package.json
+++ b/backend/package.json
@@ -45,6 +45,7 @@
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.27",
+    "usb": "^2.16.0",
     "zklib": "^0.2.11"
   },
   "devDependencies": {
